--- a/html/mobile/css/mobile.css
+++ b/html/mobile/css/mobile.css
@@ -1,13 +1,16 @@
-  #screen_list li {
-	padding: 0.3em 15px;
-	display: block;
+/*Styling for CHI'13 jQuery Mobile app to interact with big displays*/
+
+/*Style for landing page*/
+
+#screen_list li {
+  padding: 0.3em 15px;
+  display: block;
   }
-  
+
+/*Ends style for landing page*/
 
 
-  .invisible{
-    visibility:hidden;
-  }
+/*Style for tiles page*/
 
 #main_grid{
   background-color: rgb(31, 22, 32);
@@ -15,55 +18,96 @@
 #main_grid a{
   text-decoration: none;
 }
-  .tile{
-    height: 100px;
-    font-size: .9em;
-    font-weight: 400;
-    border-radius: 4px;
-    margin: 4px;
-    width:48% !important;
-    padding: 5px 5px;
-    text-shadow:none;
-    overflow:hidden;
-    color: white;
-    font-family: 'PT Sans', sans-serif;
-  }
-  .remove{
-     background: url('images/remove.png') no-repeat bottom right;
-  }
- .check{
-     background: url('images/check.png') no-repeat bottom right;
-  }
-  .green{
-    background-color: rgb(38,94,48);
-  }
 
-  .blue{
-    background-color: rgb(27,85,118);
-  }
+/*Tile button-like styling*/
+.tile{
+  height: 100px;
+  font-size: .9em;
+  font-weight: 400;
+  border-radius: 4px;
+  margin: 4px;
+  width:48% !important;
+  padding: 5px 5px;
+  overflow:hidden;
+  color: white;
+  font-family: 'PT Sans', sans-serif;
 
-  .red{
-    background-color: rgb(152,52,60);
-  }
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  border: solid 1px #000;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.4);
+  -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4), 0 1px 1px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4), 0 1px 1px rgba(0, 0, 0, 0.2);
+  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.4), 0 1px 1px rgba(0, 0, 0, 0.2);
 
-  .purple{
-    background-color: rgb(97,68,122);
-  }
+  -webkit-transition-duration: 0.2s;
+  -moz-transition-duration: 0.2s;
+  transition-duration: 0.2s;
+}
 
-  .orange{
-    background-color: rgb(211,120,60);
-  }
+.tile:hover, .tile:focus {
+  background: #356094;
+  border: solid 1px #000;
+  text-decoration: none;
+}
 
-  .light_purple{
-    background-color: #352537;
-  }
+.tile:active {
+  -webkit-box-shadow: inset 0 1px 4px rgba(0, 0, 0, 0.6);
+  -moz-box-shadow: inset 0 1px 4px rgba(0, 0, 0, 0.6);
+  box-shadow: inset 0 1px 4px rgba(0, 0, 0, 0.6);
+  background: #2E5481;
+  border: solid 1px #203E5F;
+}
+
+.remove{
+  background: url('images/remove.png') no-repeat bottom right;
+}
+.check{
+  background: url('images/check.png') no-repeat bottom right;
+}
 
 div[data-role="content"]{
   background-color: #fff;
   margin:5px;
   border-radius: 4px;
 }
+/*Ends style for tiles page*/
 
-  .selected{
-    background-color: rgba(166,166,166,1) !important;
+/*Style for search page*/
+.selected{
+  /*background-color: rgba(166,166,166,1) !important;*/
+  /*Had to do it this way to override JQM android theme styling AND iOS*/
+  background-image: linear-gradient(rgba(166,166,166,1), rgba(166,166,166,1)) !important;
+}
+
+/*Ends style for search page*/
+
+/*General styles*/
+.green{
+  background-color: rgb(38,94,48);
+}
+
+.blue{
+  background-color: rgb(27,85,118);
+}
+
+.red{
+  background-color: rgb(152,52,60);
+}
+
+.purple{
+  background-color: rgb(97,68,122);
+}
+
+.orange{
+  background-color: rgb(211,120,60);
+}
+.light_purple{
+  background-color: #352537;
+}
+
+.invisible{
+  visibility:hidden;
   }
+/*End general styles*/
