--- a/html/mobile/css/mobile.css
+++ b/html/mobile/css/mobile.css
@@ -27,6 +27,10 @@ ul li h4 a{
 
 #main_grid{
   background-color: rgb(31, 22, 32);
+  padding-left: auto;
+  padding-right: auto;
+  width:100%;
+  text-align: center;
 }
 #main_grid a{
   text-decoration: none;
@@ -39,7 +43,7 @@ ul li h4 a{
   font-weight: 400;
   border-radius: 4px;
   margin: 4px;
-  width:48% !important;
+  width:47% !important;
   padding: 5px 5px;
   overflow:hidden;
   color: white;
