fixed css on search bar

--- a/html/mobile/css/mobile.css
+++ b/html/mobile/css/mobile.css
@@ -111,6 +111,11 @@ div[data-role="content"]{
   background-image: linear-gradient(#aaaaaa, #aaaaaa) !important;
 }
 
+#searchBar{
+  padding-top: 15px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
 /*Ends style for search page*/
 
 /*General styles*/
