--- a/html/mosaic/css/tiles/session.css
+++ b/html/mosaic/css/tiles/session.css
@@ -106,7 +106,7 @@ body {
     border-radius: 5px;
 }
 
-.submission .video {
+.submission .video, .submission .cbStatement {
     display: block;
     background: #000;
     height: 280px;
@@ -123,6 +123,17 @@ body {
     width: 520px;
     height: 80px;
     color: #fff;
+}
+
+.submission .cbStatement { display: table; }
+.submission .cbStatement p {
+    display: table-cell;
+    vertical-align: middle;
+    color: #fff;
+    font-size: 14px;
+    font-weight: normal;
+    text-align: left;
+    padding: 0 50px;
 }
 
 h2 {
@@ -249,6 +260,7 @@ h3.code {
 .session_tile .threeb { left: 423px; }
 .session_tile .threeab { left: 423px; }
 .session_tile .four { right: 40px; }
+.session_tile .label_Havane { left: 40px; } 
 
 /* Colors */
 
