--- a/html/mosaic/css/tiles/session.css
+++ b/html/mosaic/css/tiles/session.css
@@ -79,9 +79,25 @@ body {
     border-radius: 10px;
     box-sizing: border-box;
     height: 10px;
+    font-size: 12px;
+    text-indent: -999em;
 }
 
-.schedule.active { background: #7f8184;}
+.schedule p { display: none; }
+
+.schedule.active { 
+    background: #7f8184;
+    text-indent: 0px;
+    color: #fff;
+}
+
+.schedule.active p {
+    display: block;
+    margin: -1px 0 0 2px;
+    padding: 0;
+    font-size: 10px;
+    color: #fff;
+}
 
 #submissions { 
     position: absolute; 
