--- a/html/mosaic/css/tiles/social.css
+++ b/html/mosaic/css/tiles/social.css
@@ -1,9 +1,14 @@
 @import url(http://fonts.googleapis.com/css?family=PT+Sans:400,700);
 
+html {
+    cursor: url(imgs/cursor.png), none !important 
+}
+
 #social {
     margin-top: 10px;
     padding: 5px 0 0 5px;
     border-top: 5px solid #352537;
+    cursor: url(imgs/cursor.png), none !important 
 }
 
 .row {
