--- a/html/mosaic/css/tiles/social.css
+++ b/html/mosaic/css/tiles/social.css
@@ -1,7 +1,7 @@
 @import url(http://fonts.googleapis.com/css?family=PT+Sans:400,700);
 
 html {
-    cursor: url(imgs/cursor.png), none !important 
+    cursor: url(/mosaic/imgs/cursor.png), none !important 
 }
 
 #social {
