--- a/html/mosaic/css/tiles/social.css
+++ b/html/mosaic/css/tiles/social.css
@@ -8,7 +8,7 @@ html {
     margin-top: 10px;
     padding: 5px 0 0 5px;
     border-top: 5px solid #352537;
-    cursor: url(imgs/cursor.png), none !important 
+    cursor: url(/mosaic/imgs/cursor.png), none !important 
 }
 
 .row {
