--- a/html/mosaic/css/vertical.css
+++ b/html/mosaic/css/vertical.css
@@ -55,3 +55,12 @@ body {
     height: 384px;
     width: 1080px;
 }
+
+.pointer {
+  width:100px; 
+  height: 100px; 
+  position:absolute; 
+  top: 10px; 
+  left: 10px; 
+  background: -webkit-radial-gradient(center, ellipse cover, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 70%, rgba(0,0,0,0) 100%);
+}
