--- a/html/mosaic/css/tiles/session.css
+++ b/html/mosaic/css/tiles/session.css
@@ -40,7 +40,7 @@ body {
 
 #timeline {
     position: absolute;
-    top: 18px;
+    top: 17px;
     width: 250px;   
 }
 
@@ -76,10 +76,10 @@ body {
 
 .schedule {
     float: left;
-    border: 1px solid #7f8184;
+    border: 1px solid #666;
     border-radius: 10px;
     box-sizing: border-box;
-    height: 10px;
+    height: 12px;
     font-size: 12px;
     text-indent: -999em;
 }
@@ -87,14 +87,14 @@ body {
 .schedule p { display: none; }
 
 .schedule.active { 
-    background: #7f8184;
+    background: #666;
     text-indent: 0px;
     color: #fff;
 }
 
 .schedule.active p {
     display: block;
-    margin: -1px 0 0 2px;
+    margin: 0px 0 0 2px;
     padding: 0;
     font-size: 10px;
     color: #fff;
