--- a/html/mobile/css/mobile.css
+++ b/html/mobile/css/mobile.css
@@ -14,6 +14,7 @@ body{
 #screen_list li {
   padding: 0.3em 15px;
   display: block;
+  padding-left: 20px;
   }
 
 #welcome{
@@ -106,7 +107,7 @@ div[data-role="content"]{
 
 /*Style for search page*/
 .selected{
-  background-color: rgba(166,166,166,1) !important;
+  /*background-color: rgba(166,166,166,1) !important;*/
   /*Had to do it this way to override JQM android theme styling AND iOS*/
   background-image: linear-gradient(#aaaaaa, #aaaaaa) !important;
 }
