--- a/html/mobile/css/mobile.css
+++ b/html/mobile/css/mobile.css
@@ -109,7 +109,8 @@ div[data-role="content"]{
 .selected{
   background-color: rgba(166,166,166,1) !important;
   /*Had to do it this way to override JQM android theme styling AND iOS*/
-  background-image: linear-gradient(#aaaaaa, #aaaaaa) !important;
+  /*background-image: linear-gradient(#aaaaaa, #aaaaaa) !important;*/
+  background: rgba(166,166,166,1) !important;
 }
 
 #searchBar{
