--- a/html/mosaic/css/tiles/session.css
+++ b/html/mosaic/css/tiles/session.css
@@ -528,6 +528,14 @@ h3.code {
     border-radius: 5px;
 }
 
+#volatile_label .meter {
+    display: inline-block;
+    width: 75px; 
+    margin: 0;
+    padding: 0;
+    border: 0;
+}
+
 .meter > span {
     display: block;
     height: 100%;
