--- a/html/mosaic/css/tiles/session.css
+++ b/html/mosaic/css/tiles/session.css
@@ -205,21 +205,21 @@ h3.code {
 .volatile_false #volatile_room { display: none; }
 
 /* Tile Metro */
-.break_tile#tile_A #metro, .break_tile#tile_C #metro, .break_tile#tile_G #metro { 
+.break_tile#tile_A #metro, .break_tile#tile_C #metro, .break_tile#tile_E #metro { 
     left: 10px;
     right: 0;
     border-top-left-radius: 10px; 
     border-bottom-left-radius: 10px;
 }
 
-.break_tile#tile_B #metro, .break_tile#tile_D #metro, .break_tile#tile_H #metro {
+.break_tile#tile_B #metro, .break_tile#tile_D #metro, .break_tile#tile_F #metro {
     left: 0;
     right: 5px;
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
 }
 
-.break_tile#tile_E #metro, .break_tile#tile_F #metro, .session_tile #metro {
+.break_tile#tile_G #metro, .break_tile#tile_H #metro, .session_tile #metro {
     left: 10px;
     right: 5px;
     border-radius: 10px;
@@ -424,9 +424,9 @@ h3.code {
 .volatile_true .submission { border-color: #352537 !important; }
 .volatile_true .submission .info { background-color: #352537 !important; }
 
-#tile_A .left, #tile_C .left, #tile_E .left, 
-#tile_F .left, #tile_G .left , 
-#tile_B .right, #tile_D .right, #tile_E .right,
+#tile_A .left, #tile_C .left,  
+#tile_E .left, #tile_G .left , 
+#tile_B .right, #tile_D .right,
 #tile_F .right, #tile_H .right {
     display: block;
 }
