--- a/html/mosaic/css/tiles/session.css
+++ b/html/mosaic/css/tiles/session.css
@@ -94,10 +94,11 @@ body {
 
 .schedule.active p {
     display: block;
-    margin: 0px 0 0 2px;
+    margin: 0;
     padding: 0;
     font-size: 10px;
     color: #fff;
+    text-align: center;
 }
 
 #submissions, #tagcloud { 
